<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="5dip"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:background="@color/grey">

    <TextView
        android:id="@+id/cityTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/citytxt"
        android:textColor="@color/green"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cityTxt"
        android:layout_alignLeft="@+id/cityTxt"
        android:layout_alignBottom="@id/cityTxt"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="0dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_marginLeft="50dp" />


    <TextView
        android:id="@+id/weatherTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/city"
        android:layout_marginTop="50dp"
        android:text="@string/weathertxt"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/weatherTxt"
        android:layout_alignLeft="@+id/weatherTxt"
        android:layout_alignBottom="@id/weatherTxt"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:layout_marginLeft="60dp"
       />


    <TextView
        android:id="@+id/tempTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/temperaturetxt"
        android:textColor="@color/green"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tempTxt"
        android:layout_alignRight="@+id/tempTxt"
        android:layout_alignBottom="@id/tempTxt"
        android:layout_marginEnd="-25dp"
        android:layout_marginRight="-25dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/minTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/min_temptxt"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/minTxt"
        android:layout_alignEnd="@+id/minTxt"
        android:layout_alignRight="@+id/minTxt"
        android:layout_marginEnd="-25dp"
        android:layout_marginRight="-25dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/maxTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/max_temptxt"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/maxTxt"
        android:layout_alignRight="@+id/maxTxt"
        android:layout_alignBottom="@id/maxTxt"
        android:layout_marginEnd="-25dp"
        android:layout_marginRight="-25dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar" />


</RelativeLayout>

